# vif

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  clippy.toml  justfile  rust-toolchain.toml  rustfmt.toml  taplo.toml
.cargo/: config.toml  release.toml
.config/: nextest.toml
.github/: rust-code-quality.json  rust-nextest.json
.github/actions/install-dependencies/: action.yml
.github/workflows/: ci.yml
src/: codegen.rs  common.rs  compile_unit.rs  frontend.rs  int.rs  ir.rs  main.rs  tests.rs  value.rs
src/codegen/: abi.rs  llvm.rs
src/codegen/abi/: aarch64.rs  x86_64.rs
src/codegen/llvm/: abi.rs
src/common/: alloc.rs  containers.rs  diagnostic.rs  interns.rs  non_max_u32.rs  span.rs
src/common/containers/: index_map.rs  sharded_index_map.rs  virtual_dyn_array.rs
src/common/containers/index_map/: entry.rs
src/common/os/: alloc.rs
src/compile_unit/: module.rs  sema.rs
src/compile_unit/sema/: call.rs
src/frontend/: ast.rs  lexer.rs  parser.rs
src/ir/: id.rs  vtir.rs  vuir.rs
src/ir/vtir/: opcodes.rs
src/ir/vuir/: from_ast.rs  opcodes.rs
src/tests/ui/: builtin-target.vif  callconv-fast.vif  callconv-from-value.vif  callconv-type-err.vif  directive-identifiers.vif  extern-with-body-err.vif  if-comptime-err.vif  if-comptime.vif  implicit-return-err.vif  import-missing.vif  local-value-assign.vif  loop-break-value.vif  missing-main.vif  nullptr-infer.vif  ptr-field-assign.vif  self-module.vif  self-nested.vif  self-receiver-associated-from-instance-err.vif  self-receiver-copy-err.vif  self-receiver-ref-err.vif  self-receiver.vif  short-if-switch-expr.vif  switch-basic.vif  switch-coerce.vif  switch-comptime-else.vif  switch-comptime-err.vif  switch-comptime-multi.vif  switch-comptime.vif  switch-enum-exhaustive.vif  switch-enum-not-exhaustive.vif  switch-multi-pattern.vif  switch-no-else.vif  unknown-directive.vif  while-loop.vif  zeroed.vif
std/: LICENSE  Target.vif  alloc.vif  builtin.vif  builtin_prelude.vif  containers.vif  os.vif  rt.vif  slice.vif  std.vif
std/alloc/: PageAllocator.vif  linear.vif
std/os/: windows.vif
(+27 files in other folders)
