[package]
edition  = "2024"
license  = "GPL-3.0-only"
name     = "vifc"
resolver = "3"
version  = "0.0.0"

[features]
default                         = ["superluminal", "llvm"]
llvm                            = ["dep:inkwell"]
superluminal                    = ["profiling/profile-with-superluminal"]
windows-stackoverflow-backtrace = ["dep:w-boson"]

[dependencies]
argh           = { version = "0.1", default-features = false, features = ["help"] }
atomic         = "0.6.1"
bitvec         = { version = "1.0", default-features = false, features = ["alloc"] }
bumpalo        = { version = "3.20", features = ["allocator_api", "boxed", "collections"] }
bytemuck       = { version = "1.25.0", features = ["derive"] }
cfg-if         = "1.0"
crossbeam      = "0.8.4"
hashify        = "0.2"
inkwell        = { version = "0.8", features = ["llvm21-1", "target-x86"], default-features = false, optional = true }
internment     = { version = "0.8", features = ["arena"] }
memx           = "0.2"
mimalloc       = { version = "0.1.48", features = ["v3"] }
owo-colors     = "4.3.0"
paste          = "1.0"
profiling      = "1.0.9"
rayon          = "1.11.0"
regex-lite     = "0.1.9"
relative-path  = "2.0.1"
rustc-hash     = "2.1"
scopeguard     = "1.2.0"
sorted-insert  = "0.2"
target-lexicon = "0.13.5"
thread_local   = "1.1.9"

# keep in sync with `internment`'s
hashbrown = "0.15.*"

# windows-only crates
[target.'cfg(windows)'.dependencies]
thound  = "0.1"
w-boson = { version = "0.1.0", optional = true }
windows = { version = "0.62.2", features = ["Win32_System_Memory"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest            = "0.26.1"

[lints.clippy]
empty_loop                 = "deny"
enum_variant_names         = "allow"
equatable_if_let           = "deny"
map_err_ignore             = "deny"
needless_pass_by_value     = "deny"
partialeq_ne_impl          = "allow"
too_many_arguments         = "allow"
undocumented_unsafe_blocks = "deny"
unnecessary_wraps          = "deny"
